--- a/src/app/domains/account/components/accounts-list-modal/accounts-list-modal.component.html
+++ b/src/app/domains/account/components/accounts-list-modal/accounts-list-modal.component.html
@@ -32,7 +32,7 @@
 
 <ng-template #footer>
   <app-button
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'account.accountsListModal.closeButton' | translate"
     [buttonSizeX]="'px100'"
     (click)="closeModal()"
