--- a/src/app/domains/account/components/edit-account-value-modal/edit-account-value-modal.component.html
+++ b/src/app/domains/account/components/edit-account-value-modal/edit-account-value-modal.component.html
@@ -30,7 +30,7 @@
 <ng-template #footer>
   <app-button
     [buttonSizeX]="'px160'"
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'account.editAccountValueModal.editButton' | translate"
     [disabled]="isSubmitButtonDisabled"
     [loading]="loading$ | async"
