--- a/src/app/domains/account/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
+++ b/src/app/domains/account/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
@@ -53,7 +53,7 @@
 
 <ng-template #footer>
   <app-button
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'account.moneyMovementBetweenAccountsModal.moveButton' | translate"
     [buttonSizeX]="'px160'"
     [disabled]="form?.invalid"
