--- a/src/app/domains/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/domains/activity-log/components/activity-log/activity-log.component.html
@@ -4,9 +4,11 @@
   @if (!isEmpty) {
     <app-button
       customTooltip
+      class="text-charcoal"
       [tooltipText]="'activityLog.removeButtonTooltip' | translate"
       [position]="['left']"
       [iconName]="'delete-bin'"
+      [type]="'inherit'"
       (click)="openRemoveConfirmationModal()"
     ></app-button>
   }
