--- a/src/app/domains/auth/components/login-button/login-button.component.html
+++ b/src/app/domains/auth/components/login-button/login-button.component.html
@@ -1,6 +1,6 @@
 <app-button
   [iconName]="'google'"
-  [colorScheme]="'green'"
+  [type]="'active'"
   [text]="'Sign in with Google'"
   [buttonSizeX]="'px240'"
   [loading]="loading$ | async"
