--- a/src/app/domains/category/components/category-item/category-item.component.html
+++ b/src/app/domains/category/components/category-item/category-item.component.html
@@ -25,6 +25,8 @@
 @if (!category.isSystem) {
   <div class="flex items-center gap-x-2">
     <app-menu
+      class="text-charcoal"
+      [type]="'inherit'"
       [menuActions]="menuActions"
       [loading]="loading$ | async"
       (click)="$event.stopPropagation()"
