--- a/src/app/domains/metadata/components/currency-switcher/currency-switcher.component.html
+++ b/src/app/domains/metadata/components/currency-switcher/currency-switcher.component.html
@@ -1,10 +1,12 @@
 <app-menu
   customTooltip
+  class="text-charcoal"
   [tooltipText]="'currencySwitcher.tooltip' | translate"
   [position]="['left']"
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
   [icon]="icon"
+  [type]="'inherit'"
   [text]="currentCurrencyText"
   [buttonSizeX]="'auto'"
 >
