--- a/src/app/modules/design-system/components/form-controls/checkbox/checkbox.component.html
+++ b/src/app/modules/design-system/components/form-controls/checkbox/checkbox.component.html
@@ -1,8 +1,8 @@
 <div
-  class="flex justify-center items-center w-5 h-5 border-2 border-solid border-black-transparent hover:border-charcoal group-hover:border-charcoal rounded-md text-white"
+  class="flex justify-center items-center w-5 h-5 border-2 border-solid border-charcoal border-opacity-50 hover:border-opacity-100 group-hover:border-opacity-100 rounded-sm text-white"
   [ngClass]="{
     'border-dark-green bg-dark-green hover:border-dark-green group-hover:border-dark-green':
-      value || indeterminate
+      value || indeterminate,
   }"
   (click)="valueChanged(); $event.stopPropagation()"
 >
