--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -1,13 +1,12 @@
 <app-button
   #trigger
   [iconName]="icon"
-  [colorScheme]="resolveColorScheme"
+  [type]="'inherit'"
   [buttonSizeY]="buttonSizeY"
   [buttonSizeX]="buttonSizeX"
   [text]="text"
   [disabled]="disabled"
   [loading]="loading"
-  [shouldUseCurrentColor]="shouldUseCurrentColor"
   (click)="toggleDropdown()"
 ></app-button>
 
@@ -19,11 +18,13 @@
       <div class="flex flex-col gap-y-1 h-full rounded-md">
         @for (action of menuActions; track action) {
           <app-button
+            class="text-charcoal"
             [text]="action.translationKey | translate"
             [iconName]="action.icon"
             [buttonSizeX]="'full'"
             [disabled]="action.disabled || (action.disabledObs | async)"
             [align]="'start'"
+            [type]="'inherit'"
             (click)="action.action(); toggleDropdown()"
           ></app-button>
         }
