--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
@@ -47,6 +47,6 @@
   }
 </div>
 
-<div class="w-full h-px bg-hover-black"></div>
+<div class="w-full h-px bg-charcoal bg-opacity-50"></div>
 
 <app-progress-bar [sections]="progressBarSections"></app-progress-bar>
