--- a/src/app/domains/account/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/domains/account/components/add-account-modal/add-account-modal.component.html
@@ -68,7 +68,7 @@
 
 <ng-template #footer>
   <app-button
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'account.addAccountModal.addAccount' | translate"
     [buttonSizeX]="'px160'"
     [disabled]="!isFormValid"
