--- a/src/app/domains/category/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/domains/category/components/add-category-modal/add-category-modal.component.html
@@ -29,7 +29,7 @@
 
 <ng-template #footer>
   <app-button
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'category.addCategoryModal.addCategory' | translate"
     [buttonSizeX]="'px160'"
     [disabled]="this.form?.invalid"
