--- a/src/app/domains/category/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/domains/category/components/category-value-modal/category-value-modal.component.html
@@ -55,7 +55,7 @@
 <ng-template #footer>
   <app-button
     [buttonSizeX]="'px100'"
-    [colorScheme]="'charcoal'"
+    [type]="'primary'"
     [text]="'category.categoryValueModal.add' | translate"
     [loading]="loading$ | async"
     [disabled]="form?.invalid"
