--- a/src/app/domains/metadata/components/language-switcher/language-switcher.component.html
+++ b/src/app/domains/metadata/components/language-switcher/language-switcher.component.html
@@ -1,10 +1,12 @@
 <app-menu
   customTooltip
+  class="text-charcoal"
   [tooltipText]="buildTranslationKey('tooltip') | translate"
   [position]="['left']"
   [dontDisplayOnScreenWidth]="true"
   [menuActions]="menuActions"
   [icon]="icon"
+  [type]="'inherit'"
   [text]="currentLanguageText"
   [buttonSizeX]="'auto'"
   [loading]="loading$ | async"
