--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,19 +1,6 @@
-<div class="absolute right-2 top-2 flex flex-col gap-1 items-center">
-  @if (menuActions?.length) {
-    <app-menu
-      [menuActions]="menuActions"
-      [disabled]="shouldDisableMenu"
-      [loading]="menuLoading"
-      [shouldUseCurrentColor]="true"
-    ></app-menu>
-  }
-
-  @if (tooltip) {
-    <app-info-icon
-      [iconSize]="'24px'"
-      [tooltipPosition]="isMobile ? 'left' : 'top'"
-      [tooltip]="tooltip"
-    ></app-info-icon>
+<div class="absolute right-2 top-2">
+  @if (content) {
+    <ng-container *ngTemplateOutlet="content"></ng-container>
   }
 </div>
 
