--- a/src/app/modules/design-system/components/snackbar/snackbar.component.html
+++ b/src/app/modules/design-system/components/snackbar/snackbar.component.html
@@ -2,7 +2,7 @@
 
 <app-button
   class="min-w-fit"
-  [colorScheme]="buttonColorScheme"
+  [type]="'primary'"
   [buttonSizeX]="'auto'"
   [text]="data.buttonText"
   (click)="data.buttonAction()"
