login button fix

--- a/src/app/domains/auth/components/login-button/login-button.component.html
+++ b/src/app/domains/auth/components/login-button/login-button.component.html
@@ -1,6 +1,7 @@
 <app-button
+  class="bg-dark-green text-white hover:bg-dark-green hover:bg-opacity-80"
   [iconName]="'google'"
-  [type]="'active'"
+  [type]="null"
   [text]="'Sign in with Google'"
   [buttonSizeX]="'px240'"
   [loading]="loading$ | async"
