category item hover effect

--- a/src/app/domains/category/components/category-item/category-item.component.scss
+++ b/src/app/domains/category/components/category-item/category-item.component.scss
@@ -1,11 +1,11 @@
 :host {
-  @apply flex justify-between items-center pl-2 py-3 pr-1 border-solid border-2 border-grey rounded-lg hover:border-charcoal h-16 gap-x-2 cursor-pointer;
+  @apply flex justify-between items-center pl-2 py-3 pr-1 border-solid border-2 rounded-lg border-charcoal h-16 gap-x-2 cursor-pointer hover:bg-grey hover:bg-opacity-10;
 
   &.is-system-category {
     @apply pointer-events-none cursor-default opacity-70;
   }
 
   @media (width <= 480px) {
-    @apply border-charcoal;
+    @apply hover:bg-opacity-0;
   }
 }
