--- a/src/app/shared/design-system/components/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/design-system/components/confirmation-modal/confirmation-modal.component.html
@@ -1,6 +1,7 @@
 <app-base-modal
   [titleTranslationKey]="buildTranslationKey('title')"
   [shouldDisplayCloseButton]="false"
+  [shouldDisplayBorder]="false"
 >
   <ng-template #contentTemplate>
     <div class="flex flex-col gap-y-4">
